--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -937,7 +937,7 @@
    "source": [
     "## Expansion\n",
     "\n",
-    "All this code was basically written in a 12 hour span. You can find it published on GitHub here. There's no personal data (or documentation), but you can run the right scripts to pull it from Slack yourself.\n",
+    "All this code was basically written in a 12 hour span. You can find the code [published on GitHub](https://github.com/qaisjp/notebook-slackalysis), and you can also [find a HTML version of this](https://tardis.ed.ac.uk/~qaisjp/interns-2018-blog.html). There's no personal data (or documentation), but you can run the right scripts to pull it from Slack yourself.\n",
     "\n",
     "Some cool things to add would be some inter-relational statistics (I made up that term). Which interns mention _each other_ the most?\n",
     "\n",
