--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -10,8 +10,9 @@
     "\n",
     "Our daily routine consists of various meetings, crazy lunches with our fellow interns, and tapping away at keyboards **writing code**.\n",
     "\n",
-    "Writing code is my life's work, and so I've decided to take this opportunity\n",
-    "to learn `matplotlib` and write this blog post in `markdown`, all in Jupyter!\n",
+    "Writing code is my life's work, and so I thought it'd be fun to **analyse\n",
+    "our usage of Slack** — a messaging platform for teams. I've decided to take this opportunity\n",
+    "to learn `matplotlib` and write this blog post in `markdown`, all in Jupyter Notebooks!\n",
     "\n",
     "\n",
     "\n",
@@ -967,5 +968,4 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
-}
+ "nbformat_minor": 
